removed fixed star jumping on hover

--- a/packages/custom/icu/public/assets/css/_middlepane.scss
+++ b/packages/custom/icu/public/assets/css/_middlepane.scss
@@ -295,7 +295,7 @@
             tooltip {
                 &:hover {
                     height: 24px;
-                    padding-top: 2px;
+                    padding-top: 3px;
                 }
             }
 
